--- a/assets/styles/temperatureBlock.css
+++ b/assets/styles/temperatureBlock.css
@@ -14,7 +14,7 @@
       rgba(75, 7, 69, 0.833),
       rgba(79, 5, 97, 0.126)
     ),
-    url("../images/backgrounds/cloudsBg.jpg");
+    url("../../public/images/backgrounds/cloudsBg.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
