--- a/assets/styles/sunBlock.css
+++ b/assets/styles/sunBlock.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  gap: 3rem;
   font-family: "Lato", sans-serif;
 }
 
@@ -28,4 +29,19 @@
   color: #dad8f7;
   font-weight: 550;
   letter-spacing: 1px;
+}
+
+.time-area{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 3rem;
+  font-size: 1rem;
+  text-align: center;
+  color: #dad8f7;
+  font-weight: bold;
+}
+
+.time-area img{
+  width: 64px;
 }
