--- a/assets/styles/temperatureBlock.css
+++ b/assets/styles/temperatureBlock.css
@@ -6,12 +6,13 @@
 
 /* Define estilos para o bloco de clima */
 .weather-block {
-  background-color: rgb(122, 96, 146);
-  border-radius: 10px;
-  grid-area: weather-block; /* Associando a célula ao nome da área */ 
-  background-position: center;
-  background-repeat: no-repeat;
+  --weather-background: url("/images/backgrounds/bg_Ensolarado.png");
+  background: 
+    linear-gradient(to bottom, rgba(75, 7, 69, 0.5), rgba(79, 5, 97, 0.126)),
+    var(--weather-background) center no-repeat;
   background-size: cover;
+  border-radius: 10px;
+  grid-area: weather-block;
   display: flex;
   flex-direction: column;
   justify-content: center;
