--- a/assets/styles/weekBlock.css
+++ b/assets/styles/weekBlock.css
@@ -17,6 +17,7 @@
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
+  gap: 10px;
 }
 
 .dow-title{
@@ -25,9 +26,9 @@
   color: #DAD8F7;
   letter-spacing: 0.5px;
 }
-.dow-svg svg{
-  height: 64px;
-  width: 64px;
+.dow-img img{
+  height: 45px;
+  width: 45px;
 }
 .dow-temp{
   font-size: 1rem;
@@ -39,6 +40,46 @@
 }
 .dow-temp span:last-child{
   color: #C2BFF4;
+}
+
+/* Tooltip */
+.dow-img {
+  position: relative;
+  display: inline-block;
+}
+
+.dow-img span {
+  visibility: hidden;
+  width: 120px;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 10px 10px;
+  position: absolute;
+  z-index: 1;
+  bottom: 150%;
+  left: 50%;
+  margin-left: -60px;
+  opacity: 0;
+  transition: opacity 0.3s;
+  text-transform: capitalize;
+}
+
+.dow-img span::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #333 transparent transparent transparent;
+}
+
+.dow-img:hover span {
+  visibility: visible;
+  opacity: 1;
 }
 
 @media screen and (max-width: 1080px) {
