--- a/assets/styles/sunBlock.css
+++ b/assets/styles/sunBlock.css
@@ -1,6 +1,15 @@
 /* Define estilos para o bloco de informações sobre o sol */
 .sun-block {
-  background-color: #6d67d0;
+  background: rgba(42, 16, 75, 0.407);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  background: rgba(42, 16, 75, 0.407);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);  
   border-radius: 10px;
   grid-area: sun-block;
   display: flex;
