--- a/assets/styles/general.css
+++ b/assets/styles/general.css
@@ -17,7 +17,7 @@ body {
 .main-background {
   min-height: 100vh;
   min-width: 100vw;
-  background-image: url("/images/backgrounds/Background.png");
+  background-image: url("/images/backgrounds/Background.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
