--- a/assets/styles/temperatureBlock.css
+++ b/assets/styles/temperatureBlock.css
@@ -135,7 +135,16 @@
   flex-wrap: nowrap; /* Mantém todos os elementos em uma única linha */
   justify-content: center;
   align-items: center;
-  background-color: rgba(87, 37, 161, 0.449);
+  background: rgba(42, 16, 75, 0.407);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  background: rgba(42, 16, 75, 0.407);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
   padding: 10px;
   border-radius: 10px;
 }
